gen/GrogtalkParser.java
// Generated from C:/Users/User/Desktop/Lenguajes Interprete/chocopyInterprete/chocopyInterprete/grammar\Grogtalk.g4 by ANTLR 4.8
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GrogtalkParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, L_BRACKET=8, R_BRACKET=9, 
		L_SPAR=10, R_SPAR=11, L_PAR=12, R_PAR=13, COMMA=14, COLON=15, PLUS=16, 
		MINUS=17, MODIFIER=18, STRING=19, K_NAME=20, K_SIZE=21, K_TAGS=22, K_ALIGNMENT=23, 
		K_ARMORCLASS=24, K_HITPOINTS=25, K_SPEED=26, WS=27, INT=28;
	public static final int
		RULE_creature = 0, RULE_creature_body = 1, RULE_statistic = 2, RULE_name = 3, 
		RULE_size = 4, RULE_tags = 5, RULE_alignment = 6, RULE_armor_class = 7, 
		RULE_hitpoints = 8, RULE_speed = 9, RULE_abilities = 10, RULE_taglist = 11, 
		RULE_ability_expr = 12, RULE_dice_expr = 13, RULE_armor_class_expr = 14, 
		RULE_hit_points_expr = 15, RULE_speed_expr = 16, RULE_walking_speed = 17, 
		RULE_speed_obj = 18, RULE_speed_expr1 = 19, RULE_speed_aux_expr = 20;
	private static String[] makeRuleNames() {
		return new String[] {
			"creature", "creature_body", "statistic", "name", "size", "tags", "alignment", 
			"armor_class", "hitpoints", "speed", "abilities", "taglist", "ability_expr", 
			"dice_expr", "armor_class_expr", "hit_points_expr", "speed_expr", "walking_speed", 
			"speed_obj", "speed_expr1", "speed_aux_expr"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'d'", "'D'", "'ft.'", "'burrow'", "'fly'", "'(hover)'", "'climb'", 
			"'{'", "'}'", "'['", "']'", "'('", "')'", "','", "':'", "'+'", "'-'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, "L_BRACKET", "R_BRACKET", 
			"L_SPAR", "R_SPAR", "L_PAR", "R_PAR", "COMMA", "COLON", "PLUS", "MINUS", 
			"MODIFIER", "STRING", "K_NAME", "K_SIZE", "K_TAGS", "K_ALIGNMENT", "K_ARMORCLASS", 
			"K_HITPOINTS", "K_SPEED", "WS", "INT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Grogtalk.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	    int abilityCount;

	public GrogtalkParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class CreatureContext extends ParserRuleContext {
		public TerminalNode L_BRACKET() { return getToken(GrogtalkParser.L_BRACKET, 0); }
		public Creature_bodyContext creature_body() {
			return getRuleContext(Creature_bodyContext.class,0);
		}
		public TerminalNode R_BRACKET() { return getToken(GrogtalkParser.R_BRACKET, 0); }
		public CreatureContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_creature; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrogtalkListener ) ((GrogtalkListener)listener).enterCreature(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrogtalkListener ) ((GrogtalkListener)listener).exitCreature(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrogtalkVisitor ) return ((GrogtalkVisitor<? extends T>)visitor).visitCreature(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CreatureContext creature() throws RecognitionException {
		CreatureContext _localctx = new CreatureContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_creature);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(42);
			match(L_BRACKET);
			setState(43);
			creature_body();
			setState(44);
			match(R_BRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Creature_bodyContext extends ParserRuleContext {
		public List<StatisticContext> statistic() {
			return getRuleContexts(StatisticContext.class);
		}
		public StatisticContext statistic(int i) {
			return getRuleContext(StatisticContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(GrogtalkParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(GrogtalkParser.COMMA, i);
		}
		public Creature_bodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_creature_body; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrogtalkListener ) ((GrogtalkListener)listener).enterCreature_body(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrogtalkListener ) ((GrogtalkListener)listener).exitCreature_body(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrogtalkVisitor ) return ((GrogtalkVisitor<? extends T>)visitor).visitCreature_body(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Creature_bodyContext creature_body() throws RecognitionException {
		Creature_bodyContext _localctx = new Creature_bodyContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_creature_body);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(46);
			statistic();
			setState(51);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(47);
				match(COMMA);
				setState(48);
				statistic();
				}
				}
				setState(53);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatisticContext extends ParserRuleContext {
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public AbilitiesContext abilities() {
			return getRuleContext(AbilitiesContext.class,0);
		}
		public SizeContext size() {
			return getRuleContext(SizeContext.class,0);
		}
		public TagsContext tags() {
			return getRuleContext(TagsContext.class,0);
		}
		public AlignmentContext alignment() {
			return getRuleContext(AlignmentContext.class,0);
		}
		public Armor_classContext armor_class() {
			return getRuleContext(Armor_classContext.class,0);
		}
		public HitpointsContext hitpoints() {
			return getRuleContext(HitpointsContext.class,0);
		}
		public StatisticContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statistic; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrogtalkListener ) ((GrogtalkListener)listener).enterStatistic(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrogtalkListener ) ((GrogtalkListener)listener).exitStatistic(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrogtalkVisitor ) return ((GrogtalkVisitor<? extends T>)visitor).visitStatistic(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatisticContext statistic() throws RecognitionException {
		StatisticContext _localctx = new StatisticContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_statistic);
		try {
			setState(61);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case K_NAME:
				enterOuterAlt(_localctx, 1);
				{
				setState(54);
				name();
				}
				break;
			case L_SPAR:
				enterOuterAlt(_localctx, 2);
				{
				setState(55);
				abilities();
				}
				break;
			case K_SIZE:
				enterOuterAlt(_localctx, 3);
				{
				setState(56);
				size();
				}
				break;
			case K_TAGS:
				enterOuterAlt(_localctx, 4);
				{
				setState(57);
				tags();
				}
				break;
			case K_ALIGNMENT:
				enterOuterAlt(_localctx, 5);
				{
				setState(58);
				alignment();
				}
				break;
			case K_ARMORCLASS:
				enterOuterAlt(_localctx, 6);
				{
				setState(59);
				armor_class();
				}
				break;
			case K_HITPOINTS:
				enterOuterAlt(_localctx, 7);
				{
				setState(60);
				hitpoints();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NameContext extends ParserRuleContext {
		public TerminalNode K_NAME() { return getToken(GrogtalkParser.K_NAME, 0); }
		public TerminalNode COLON() { return getToken(GrogtalkParser.COLON, 0); }
		public TerminalNode STRING() { return getToken(GrogtalkParser.STRING, 0); }
		public NameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_name; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrogtalkListener ) ((GrogtalkListener)listener).enterName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrogtalkListener ) ((GrogtalkListener)listener).exitName(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrogtalkVisitor ) return ((GrogtalkVisitor<? extends T>)visitor).visitName(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NameContext name() throws RecognitionException {
		NameContext _localctx = new NameContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_name);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(63);
			match(K_NAME);
			setState(64);
			match(COLON);
			setState(65);
			match(STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SizeContext extends ParserRuleContext {
		public TerminalNode K_SIZE() { return getToken(GrogtalkParser.K_SIZE, 0); }
		public TerminalNode COLON() { return getToken(GrogtalkParser.COLON, 0); }
		public TerminalNode STRING() { return getToken(GrogtalkParser.STRING, 0); }
		public SizeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_size; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrogtalkListener ) ((GrogtalkListener)listener).enterSize(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrogtalkListener ) ((GrogtalkListener)listener).exitSize(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrogtalkVisitor ) return ((GrogtalkVisitor<? extends T>)visitor).visitSize(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SizeContext size() throws RecognitionException {
		SizeContext _localctx = new SizeContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_size);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(67);
			match(K_SIZE);
			setState(68);
			match(COLON);
			setState(69);
			match(STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TagsContext extends ParserRuleContext {
		public TerminalNode K_TAGS() { return getToken(GrogtalkParser.K_TAGS, 0); }
		public TerminalNode COLON() { return getToken(GrogtalkParser.COLON, 0); }
		public TaglistContext taglist() {
			return getRuleContext(TaglistContext.class,0);
		}
		public TagsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tags; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrogtalkListener ) ((GrogtalkListener)listener).enterTags(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrogtalkListener ) ((GrogtalkListener)listener).exitTags(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrogtalkVisitor ) return ((GrogtalkVisitor<? extends T>)visitor).visitTags(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TagsContext tags() throws RecognitionException {
		TagsContext _localctx = new TagsContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_tags);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(71);
			match(K_TAGS);
			setState(72);
			match(COLON);
			setState(73);
			taglist();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AlignmentContext extends ParserRuleContext {
		public TerminalNode K_ALIGNMENT() { return getToken(GrogtalkParser.K_ALIGNMENT, 0); }
		public TerminalNode COLON() { return getToken(GrogtalkParser.COLON, 0); }
		public TerminalNode STRING() { return getToken(GrogtalkParser.STRING, 0); }
		public AlignmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_alignment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrogtalkListener ) ((GrogtalkListener)listener).enterAlignment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrogtalkListener ) ((GrogtalkListener)listener).exitAlignment(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrogtalkVisitor ) return ((GrogtalkVisitor<? extends T>)visitor).visitAlignment(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AlignmentContext alignment() throws RecognitionException {
		AlignmentContext _localctx = new AlignmentContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_alignment);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(75);
			match(K_ALIGNMENT);
			setState(76);
			match(COLON);
			setState(77);
			match(STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Armor_classContext extends ParserRuleContext {
		public TerminalNode K_ARMORCLASS() { return getToken(GrogtalkParser.K_ARMORCLASS, 0); }
		public TerminalNode COLON() { return getToken(GrogtalkParser.COLON, 0); }
		public Armor_class_exprContext armor_class_expr() {
			return getRuleContext(Armor_class_exprContext.class,0);
		}
		public Armor_classContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_armor_class; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrogtalkListener ) ((GrogtalkListener)listener).enterArmor_class(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrogtalkListener ) ((GrogtalkListener)listener).exitArmor_class(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrogtalkVisitor ) return ((GrogtalkVisitor<? extends T>)visitor).visitArmor_class(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Armor_classContext armor_class() throws RecognitionException {
		Armor_classContext _localctx = new Armor_classContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_armor_class);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(79);
			match(K_ARMORCLASS);
			setState(80);
			match(COLON);
			setState(81);
			armor_class_expr();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class HitpointsContext extends ParserRuleContext {
		public TerminalNode K_HITPOINTS() { return getToken(GrogtalkParser.K_HITPOINTS, 0); }
		public TerminalNode COLON() { return getToken(GrogtalkParser.COLON, 0); }
		public Hit_points_exprContext hit_points_expr() {
			return getRuleContext(Hit_points_exprContext.class,0);
		}
		public HitpointsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_hitpoints; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrogtalkListener ) ((GrogtalkListener)listener).enterHitpoints(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrogtalkListener ) ((GrogtalkListener)listener).exitHitpoints(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrogtalkVisitor ) return ((GrogtalkVisitor<? extends T>)visitor).visitHitpoints(this);
			else return visitor.visitChildren(this);
		}
	}

	public final HitpointsContext hitpoints() throws RecognitionException {
		HitpointsContext _localctx = new HitpointsContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_hitpoints);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(83);
			match(K_HITPOINTS);
			setState(84);
			match(COLON);
			setState(85);
			hit_points_expr();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SpeedContext extends ParserRuleContext {
		public TerminalNode K_SPEED() { return getToken(GrogtalkParser.K_SPEED, 0); }
		public TerminalNode COLON() { return getToken(GrogtalkParser.COLON, 0); }
		public Speed_exprContext speed_expr() {
			return getRuleContext(Speed_exprContext.class,0);
		}
		public SpeedContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_speed; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrogtalkListener ) ((GrogtalkListener)listener).enterSpeed(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrogtalkListener ) ((GrogtalkListener)listener).exitSpeed(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrogtalkVisitor ) return ((GrogtalkVisitor<? extends T>)visitor).visitSpeed(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SpeedContext speed() throws RecognitionException {
		SpeedContext _localctx = new SpeedContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_speed);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(87);
			match(K_SPEED);
			setState(88);
			match(COLON);
			setState(89);
			speed_expr();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AbilitiesContext extends ParserRuleContext {
		public TerminalNode L_SPAR() { return getToken(GrogtalkParser.L_SPAR, 0); }
		public List<Ability_exprContext> ability_expr() {
			return getRuleContexts(Ability_exprContext.class);
		}
		public Ability_exprContext ability_expr(int i) {
			return getRuleContext(Ability_exprContext.class,i);
		}
		public TerminalNode R_SPAR() { return getToken(GrogtalkParser.R_SPAR, 0); }
		public List<TerminalNode> COMMA() { return getTokens(GrogtalkParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(GrogtalkParser.COMMA, i);
		}
		public AbilitiesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_abilities; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrogtalkListener ) ((GrogtalkListener)listener).enterAbilities(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrogtalkListener ) ((GrogtalkListener)listener).exitAbilities(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrogtalkVisitor ) return ((GrogtalkVisitor<? extends T>)visitor).visitAbilities(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AbilitiesContext abilities() throws RecognitionException {
		AbilitiesContext _localctx = new AbilitiesContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_abilities);
		 abilityCount = 0; 
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(91);
			match(L_SPAR);
			setState(92);
			ability_expr();
			setState(97); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(93);
				match(COMMA);
				setState(94);
				ability_expr();
				 abilityCount++; 
				}
				}
				setState(99); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==COMMA );
			setState(101);
			match(R_SPAR);
			setState(102);
			if (!( abilityCount == 5 )) throw new FailedPredicateException(this, " abilityCount == 5 ");
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TaglistContext extends ParserRuleContext {
		public TerminalNode L_SPAR() { return getToken(GrogtalkParser.L_SPAR, 0); }
		public List<TerminalNode> STRING() { return getTokens(GrogtalkParser.STRING); }
		public TerminalNode STRING(int i) {
			return getToken(GrogtalkParser.STRING, i);
		}
		public TerminalNode R_PAR() { return getToken(GrogtalkParser.R_PAR, 0); }
		public List<TerminalNode> COMMA() { return getTokens(GrogtalkParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(GrogtalkParser.COMMA, i);
		}
		public TaglistContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_taglist; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrogtalkListener ) ((GrogtalkListener)listener).enterTaglist(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrogtalkListener ) ((GrogtalkListener)listener).exitTaglist(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrogtalkVisitor ) return ((GrogtalkVisitor<? extends T>)visitor).visitTaglist(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TaglistContext taglist() throws RecognitionException {
		TaglistContext _localctx = new TaglistContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_taglist);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104);
			match(L_SPAR);
			setState(105);
			match(STRING);
			setState(110);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(106);
				match(COMMA);
				setState(107);
				match(STRING);
				}
				}
				setState(112);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(113);
			match(R_PAR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Ability_exprContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(GrogtalkParser.INT, 0); }
		public TerminalNode L_PAR() { return getToken(GrogtalkParser.L_PAR, 0); }
		public TerminalNode MODIFIER() { return getToken(GrogtalkParser.MODIFIER, 0); }
		public TerminalNode R_PAR() { return getToken(GrogtalkParser.R_PAR, 0); }
		public Ability_exprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ability_expr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrogtalkListener ) ((GrogtalkListener)listener).enterAbility_expr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrogtalkListener ) ((GrogtalkListener)listener).exitAbility_expr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrogtalkVisitor ) return ((GrogtalkVisitor<? extends T>)visitor).visitAbility_expr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Ability_exprContext ability_expr() throws RecognitionException {
		Ability_exprContext _localctx = new Ability_exprContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_ability_expr);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115);
			match(INT);
			setState(116);
			match(L_PAR);
			setState(117);
			match(MODIFIER);
			setState(118);
			match(R_PAR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Dice_exprContext extends ParserRuleContext {
		public List<TerminalNode> INT() { return getTokens(GrogtalkParser.INT); }
		public TerminalNode INT(int i) {
			return getToken(GrogtalkParser.INT, i);
		}
		public TerminalNode MODIFIER() { return getToken(GrogtalkParser.MODIFIER, 0); }
		public Dice_exprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dice_expr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrogtalkListener ) ((GrogtalkListener)listener).enterDice_expr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrogtalkListener ) ((GrogtalkListener)listener).exitDice_expr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrogtalkVisitor ) return ((GrogtalkVisitor<? extends T>)visitor).visitDice_expr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Dice_exprContext dice_expr() throws RecognitionException {
		Dice_exprContext _localctx = new Dice_exprContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_dice_expr);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(120);
			match(INT);
			setState(121);
			_la = _input.LA(1);
			if ( !(_la==T__0 || _la==T__1) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(122);
			match(INT);
			setState(124);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==MODIFIER) {
				{
				setState(123);
				match(MODIFIER);
				}
			}
